fix: corrigir validação de estado e cidade para países estrangeiros e 'Outro' no cadastro de pessoa